Center home page - fix nav bar on mobile

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,7 +2,7 @@
   border-bottom: 1px solid var(--ifm-toc-border-color);
 }
 
-@media (min-width: 961px) {
+@media (min-width: 996px) {
   .navbar {
     width: var(--doc-sidebar-width);
     border-bottom: 0;
