--- a/src/theme/SearchBar/styles.css
+++ b/src/theme/SearchBar/styles.css
@@ -56,3 +56,9 @@ html[data-theme="light"] .DocSearch-Button-Container > svg {
 html[data-theme="light"] .DocSearch-Button-Container > span {
   color: rgba(0, 0, 0, 0.5);
 }
+
+@media (max-width: 640px) {
+  .DocSearch-Button {
+    max-width: 32px !important;
+  }
+}
